--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('./sw.js')
-            .then(reg => console.log('SW registrado', reg))
-            .catch(err => console.log('Error SW', err));
+            .catch(() => {});
         });
       }
     </script>
